--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <td>
           <img
             height="117px"
-            src="https://media-exp1.licdn.com/dms/image/C5603AQH2_tGUHcfZYw/profile-displayphoto-shrink_400_400/0/1631113531627?e=1637193600&v=beta&t=KU6XZH4Cx2pDzmXo1uh3bowBT_NKsdHLWuPgxVjqAD0"
+            src="images/profile-pic.jpg"
             alt="Madhurima profile pic web"
           />
         </td>
